# research-kb

./: .env.example  .gitignore  BIBLIOGRAPHY.md  CLAUDE.md  Dockerfile.api  README.md  ROADMAP.md  TO_ACQUIRE.md  WEEK1_DELIVERABLES.md  codex-bib.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: validation_tracking.md
.github/workflows/: daily-validation.yml  pr-checks.yml  weekly-full-rebuild.yml
docs/: INDEX.md  PRE_VALIDATION_TESTING.md  RECOVERY.md  SYSTEM_DESIGN.md  TEST_COVERAGE_AUDIT.md  TRIGGER_VALIDATION_WORKFLOW.md  VALIDATION_QUICK_REFERENCE.md  VALIDATION_QUICK_START.md  VALIDATION_TRACKER.md  WEEK_2_DELIVERABLES.md  phase1_5_completion_report.md
docs/archive/: phase2_step9_completion_report.md
docs/design/: phase3_research_notes.md
docs/guides/: LOCAL_DEVELOPMENT.md  STEP_BY_STEP_VALIDATION_GUIDE.md
docs/status/: CURRENT_STATUS.md  MIGRATION_GRAPH_DEFAULT.md  VALIDATION_TRACKER.md
fixtures/concepts/: seed_concepts.yaml  synonym_map.yaml
fixtures/eval/: phase3_results.json  retrieval_test_cases.yaml
fixtures/samples/: README.md
scripts/: backfill_concept_embeddings.py  backup_db.sh  build_citation_graph.py  docker-safe.sh  eval_phase3.py  eval_retrieval.py  extract_citations.py  extract_concepts.py  generate_status.py  identify_ocr_needed.py  ingest_corpus.py  ingest_golden_pdfs.py  ingest_missing_papers.py  ingest_missing_textbooks.py  master_plan_validation.py  repair_orphan_sources.py  retry_dlq.py  run_local_validation.sh  run_quality_checks.py  validate_known_answers.py  validate_seed_concepts.py
(+29 files in other folders)
